chore: driver controller refactor